--- a/index.html
+++ b/index.html
@@ -15,6 +15,54 @@ body{
 #player{
 	font-weight: bold;
 }
+
+/* This button was generated using CSSButtonGenerator.com */
+.nice_button {
+	margin-top: 5px;
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
+	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
+	background-color:#ededed;
+	-webkit-border-top-left-radius:6px;
+	-moz-border-radius-topleft:6px;
+	border-top-left-radius:6px;
+	-webkit-border-top-right-radius:6px;
+	-moz-border-radius-topright:6px;
+	border-top-right-radius:6px;
+	-webkit-border-bottom-right-radius:6px;
+	-moz-border-radius-bottomright:6px;
+	border-bottom-right-radius:6px;
+	-webkit-border-bottom-left-radius:6px;
+	-moz-border-radius-bottomleft:6px;
+	border-bottom-left-radius:6px;
+	text-indent:0;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	color:#777777;
+	font-family:arial;
+	font-size:15px;
+	font-weight:bold;
+	font-style:normal;
+	height:50px;
+	line-height:50px;
+	width:100px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #ffffff;
+}
+.nice_button:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
+	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
+	background-color:#dfdfdf;
+}.nice_button:active {
+	position:relative;
+	top:1px;
+}
+
 </style>
 </head>
 <body>
@@ -27,7 +75,9 @@ body{
 		<div id="status">
 			Current Player: <span id = "player"></span>
 			<br><br>
-			Next Player: <span id = "next_player"></span> <button>Flip</button>
+			Next Player: <span id = "next_player"></span>
+			<br>
+			<a href="#" class="nice_button">FLIP</a>
 		</div>
 		<div id = "rule" style="display: none">
 			Rule #<span id="rule_no"></span>:
@@ -123,7 +173,7 @@ $(document).ready(function(){
 	radius = ppi / 2.;
 	
 	// set onclick for button
-	$("button").click(flip);
+	$(".nice_button").click(flip);
 	
 	// next player
 	$("#next_player").html(players[0]);
